<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/menu_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:orientation="vertical"
            android:padding="5dp">

            <!-- Media -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/menu_title_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/menu_author_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/author"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/menu_intro_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/intro"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="12sp" />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu_go_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="2dp"
                    android:insetBottom="2dp"
                    android:text="@string/go" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu_add_favor_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/round_favorite_24" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>