<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9E9E9E"
    tools:context=".AddMenuActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FEDBD0"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar_add"
                style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#442C2E"
                android:elevation="0dp"
                app:navigationIcon="@drawable/round_arrow_back_20"
                app:title="Create new Menu" />


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/Title_Space"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/Title_text_field"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:hint="Enter the title"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/ingredient"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <LinearLayout
                        android:id="@+id/Ingredient_Space"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/Ingredient_text_field_1"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:ems="10"
                                android:inputType="textPersonName" />
                        </LinearLayout>

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/Add_Ingredient_Button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#FEDBD0"
                        app:srcCompat="@drawable/round_add_circle_20" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/process"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <LinearLayout
                        android:id="@+id/Process_Space"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/Process_text_field_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/Add_Process_Button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#FEDBD0"
                        app:srcCompat="@drawable/round_add_circle_20" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/confirm_button_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#8D6E63"
                        android:padding="10dp"
                        android:text="@string/confirm"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>